# agin-auth

./: .gitignore  Caddyfile  Cargo.toml  clippy.toml  compose.yaml  pnpm-lock.yaml
.github/: pull_request_template.md
.github/workflows/: clippy.yaml  rustfmt.yaml
.zed/: settings.json
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/androidTest/java/rocks/agin/auth/: ExampleInstrumentedTest.kt
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/rocks/agin/auth/: MainActivity.kt
apps/android/app/src/main/java/rocks/agin/auth/ui/theme/: Color.kt  Theme.kt  Type.kt
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/app/src/test/java/rocks/agin/auth/: ExampleUnitTest.kt
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/frontend/: .prettierrc.json  package.json  tsconfig.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/(loginform)/: layout.tsx
apps/frontend/app/(loginform)/application/authorize/: page.tsx
apps/frontend/app/(loginform)/confirm-email/: page.tsx
apps/frontend/app/(loginform)/forgot-password/: page.tsx
apps/frontend/app/(loginform)/login/: layout.tsx  login-options.tsx  page.tsx  password.tsx  pgp.tsx  recovery-code.tsx  totp.tsx  two-factor-options.tsx  webauthn-passwordless.tsx  webauthn.tsx  welcome.tsx
apps/frontend/app/(loginform)/login/pgp/: challenge-step.tsx  copy-button.tsx  quick-sign-command.tsx  signature-step.tsx
apps/frontend/app/(loginform)/register/: credentials-step.tsx  info-step.tsx  page.tsx  success-step.tsx
apps/frontend/app/(loginform)/reset-password/: page.tsx
apps/frontend/app/dashboard/: layout.tsx  page.tsx
apps/frontend/app/dashboard/components/: dashboard-header.tsx  dashboard-status.tsx  delete-account-section.tsx  factor-key-item.tsx  factor-row.tsx  helpers.tsx  index.ts  password-row.tsx  pgp-row.tsx  profile-row.tsx  recovery-codes-row.tsx  totp-disable-dialog.tsx  totp-row.tsx  totp-setup-dialog.tsx  webauthn-row.tsx
apps/frontend/app/dashboard/sessions/: page.tsx  session-card.tsx
apps/frontend/components/: copy-button.tsx
apps/frontend/components/ui/: dropdown-menu.tsx  link.tsx  login-icon.tsx  login-option.tsx
apps/frontend/lib/: api-error.ts  utils.ts
apps/frontend/lib/hooks/: index.ts  use-login-success.ts  use-webauthn-2fa.ts  use-webauthn-core.ts  use-webauthn-passwordless.ts  use-webauthn-registration.ts
apps/frontend/lib/providers/: api.ts
auth-core/: Cargo.toml
auth-core/src/: factors.rs  flow.rs  lib.rs  user_id.rs  util.rs
auth-core/src/factors/: state.rs
entity/: Cargo.toml
macros/: Cargo.toml
macros/src/: factor.rs  lib.rs  register.rs  util.rs
macros/src/factor/: args.rs  definitions.rs  generate_handler.rs  router.rs
macros/src/register/: entry.rs  enums.rs  list.rs
macros/src/register/enums/: definitions.rs  utils.rs
mail/: Cargo.toml
mail/src/: lib.rs  templates.rs
mail/tests/: templates.rs
server/: Cargo.toml
server/src/: axum_error.rs  database.rs  entity.rs  extractors.rs  factors.rs  flow.rs  init.rs  main.rs  mongo_id.rs  oidc.rs  routes.rs  settings.rs  state.rs  user_id.rs  utils.rs  validators.rs  webauthn.rs
server/src/entity/: auth_methods.rs  password.rs  pgp.rs  recovery_code.rs  totp.rs  user.rs  webauthn.rs
server/src/extractors/: unauthenticated_user.rs
server/src/factors/: password.rs
server/src/flow/: context.rs  issuer.rs  policy.rs
server/src/middlewares/: require_auth.rs
server/src/routes/: api.rs  oauth.rs  oidc_routes.rs  well_known.rs
server/src/routes/api/: admin.rs  applications.rs  confirm_email.rs  health.rs  login.rs  logout.rs  password_reset.rs  register.rs  settings.rs
server/src/routes/api/admin/: applications.rs
server/src/routes/api/login/: options.rs  password.rs  pgp.rs  recovery_codes.rs  totp.rs  webauthn.rs
server/src/routes/api/login/pgp/: challenge.rs
server/src/routes/api/login/webauthn/: discoverable_finish.rs  discoverable_start.rs  finish.rs  helpers.rs  start.rs
server/src/routes/api/login/webauthn/passwordless/: finish.rs  start.rs
server/src/routes/api/settings/: account.rs  factors.rs  password.rs  profile.rs  sessions.rs
server/src/routes/api/settings/factors/: pgp.rs  recovery_codes.rs  totp.rs  webauthn.rs
server/src/routes/api/settings/factors/pgp/: delete.rs  disable.rs  enable.rs
server/src/routes/api/settings/factors/recovery_codes/: enable.rs  reset.rs
server/src/routes/api/settings/factors/totp/: disable.rs  enable.rs
server/src/routes/api/settings/factors/totp/enable/: confirm.rs
server/src/routes/api/settings/factors/webauthn/: delete.rs  finish.rs  start.rs
server/src/webauthn/: types.rs
