[workspace]
resolver = "2"
members = ["auth-core", "entity", "macros", "mail", "server"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
similar_names = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
future_not_send = "allow"
# Too many false positives
option_if_let_else = "allow"

[workspace.dependencies]
async-trait = "0.1.89"
auth_core = { path = "auth-core" }
chrono = { version = "0.4.44", features = ["serde"] }
color-eyre = "0.6.5"
config = "0.15.22"
dotenvy = "0.15.7"
entity = { path = "entity" }
futures = "0.3.32"
http = "1.4.0"
http-serde-ext = "1.0.2"
macros = { path = "macros" }
mail = { path = "mail" }
sea-orm = { version = "2.0.0-rc.28", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-json",
    "with-uuid",
    "schema-sync",
    "entity-registry",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tower-sessions = { version = "0.14.0", default-features = false }
tower-sessions-core = { version = "0.14.0" }
tower-sessions-redis-store = "0.16.0"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
url = "2.5.8"
utoipa = { version = "5.4.0" }
validator = { version = "0.20.0", features = ["derive"] }
