[package]
name = "auth_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
color-eyre.workspace = true
serde.workspace = true
thiserror.workspace = true
tower-sessions-core.workspace = true
utoipa.workspace = true
validator.workspace = true

[lints]
workspace = true
