[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[features]
ts-rs = ["dep:ts-rs"]
utoipa = ["dep:utoipa"]
default = []

[dependencies]
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = "3.18.0"
strum.workspace = true
ts-rs = { version = "12.0.1", features = ["chrono-impl"], optional = true }
utoipa = { workspace = true, features = ["chrono", "macros"], optional = true }
