[package]
name = "server"
version = "1.0.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-valid = "0.24.0"
base32 = "0.5.1"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.4"
config = "0.15.11"
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
http-serde-ext = "1.0.2"
mongodb = "3.2.3"
openidconnect = { version = "4.0.0", default-features = false, features = [
    "reqwest",
    "rustls-tls",
    "timing-resistant-secret-traits",
] }
partial_struct = "0.4.5"
paste = "1.0.15"
pgp = "0.16.0"
rand = { version = "0.9.1", features = ["thread_rng"] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = [
    "rustls-tls",
    "http2",
    "charset",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_plain = "1.0.2"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
totp-rs = { version = "5.7.0", features = ["gen_secret", "otpauth"] }
tower = { version = "0.5.2", features = ["full", "tokio", "log"] }
tower-sessions = "0.14.0"
tower-sessions-redis-store = "0.16.0"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
url = "2.5.4"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
visible = "0.0.1"
webauthn-rs = { version = "0.5.2", features = ["danger-allow-state-serialisation"] }
