[package]
name = "server"
version = "1.0.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait.workspace = true
auth_core.workspace = true
axum = { version = "0.8.8", features = ["macros"] }
axum-valid = "0.24.0"
base32 = "0.5.1"
base64 = "0.22.1"
base64urlsafedata = "0.5.4"
chrono.workspace = true
color-eyre.workspace = true
config.workspace = true
dotenvy.workspace = true
futures.workspace = true
hex = "0.4.3"
http.workspace = true
http-serde-ext.workspace = true
macros.workspace = true
mail.workspace = true
mongodb = "3.5.2"
openidconnect = { version = "4.0.1", default-features = false, features = [
    "reqwest",
    "rustls-tls",
    "timing-resistant-secret-traits",
] }
partial_struct = "0.4.5"
paste = "1.0.15"
pgp = "0.19.0"
rand = { version = "0.10.0", features = ["thread_rng"] }
rand_core = { version = "0.10.0" }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = [
    "http2",
    "charset",
], default-features = false }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_plain = "1.0.2"
strum.workspace = true
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.2"
totp-rs = { version = "5.7.1", features = ["gen_secret", "otpauth"] }
tower = { version = "0.5.3", features = ["full", "tokio", "log"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tower-sessions = "0.14.0"
tower-sessions-redis-store = "0.16.0"
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
utoipa = { workspace = true, features = ["axum_extras", "url", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.23.0", features = ["v4"] }
validator.workspace = true
visible = "0.0.1"
webauthn-rs = { version = "0.5.4", features = [
    "danger-allow-state-serialisation",
    "resident-key-support",
    "conditional-ui",
] }
webauthn-rs-proto = "0.5.4"
