[package]
name = "server"
version = "1.0.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
auth_core = { version = "0.1.0", path = "../auth-core" }
mail = { version = "0.1.0", path = "../mail" }
axum = { version = "0.8.8", features = ["macros"] }
axum-valid = "0.24.0"
base32 = "0.5.1"
base64 = "0.22.1"
base64urlsafedata = "0.5.4"
chrono = { version = "0.4.44", features = ["serde"] }
color-eyre = "0.6.5"
config = "0.15.22"
dotenvy = "0.15.7"
futures = "0.3.32"
hex = "0.4.3"
http = "1.4.0"
http-serde-ext = "1.0.2"
jsonwebtoken = "9"
macros = { version = "0.1.0", path = "../macros" }
mongodb = "3.5.2"
openidconnect = { version = "4.0.1", default-features = false, features = [
    "reqwest",
    "rustls-tls",
    "timing-resistant-secret-traits",
] }
partial_struct = "0.4.5"
paste = "1.0.15"
pgp = "0.19.0"
rand = { version = "0.10.0", features = ["thread_rng"] }
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
rand_core = { version = "0.10.0" }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = [
    "http2",
    "charset",
], default-features = false }
sea-orm = { version = "2.0.0-rc.18", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-json",
    "with-uuid",
    "schema-sync",
    "entity-registry",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_plain = "1.0.2"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.2"
totp-rs = { version = "5.7.1", features = ["gen_secret", "otpauth"] }
tower = { version = "0.5.3", features = ["full", "tokio", "log"] }
tower_governor = "0.8.0"
tower-http = { version = "0.6.8", features = ["trace"] }
tower-sessions = "0.14.0"
tower-sessions-redis-store = "0.16.0"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
url = "2.5.8"
urlencoding = "2"
utoipa = { version = "5.4.0", features = ["axum_extras", "url", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.23.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
visible = "0.0.1"
webauthn-rs = { version = "0.5.4", features = [
    "danger-allow-state-serialisation",
    "resident-key-support",
    "conditional-ui",
] }
webauthn-rs-proto = "0.5.4"
axum-client-ip = "1.3.1"
